crates/talkbank-re2c-parser/tests/snapshots/snapshot_tests__snapshot_media_with_status.snap
---
source: crates/talkbank-re2c-parser/tests/snapshot_tests.rs
expression: tokens
---
- kind: HeaderPrefix
  text: "@Media:\t"
- kind: MediaWord
  text: recording
- kind: Comma
  text: ","
- kind: Whitespace
  text: " "
- kind: MediaWord
  text: video
- kind: Comma
  text: ","
- kind: Whitespace
  text: " "
- kind: MediaWord
  text: missing
- kind: Newline
  text: "\n"
