crates/talkbank-re2c-parser/tests/snapshots/snapshot_tests__snapshot_mor_simple.snap
---
source: crates/talkbank-re2c-parser/tests/snapshot_tests.rs
expression: tokens
---
- kind: "MorWord { pos: \"pro\", lemma_features: \"I\" }"
  text: pro
- kind: Whitespace
  text: " "
- kind: "MorWord { pos: \"v\", lemma_features: \"want\" }"
  text: v
- kind: Whitespace
  text: " "
- kind: "MorWord { pos: \"n\", lemma_features: \"cookie-PL\" }"
  text: n
- kind: Whitespace
  text: " "
- kind: Period
  text: "."
- kind: Newline
  text: "\n"
