crates/talkbank-re2c-parser/tests/snapshots/snapshot_tests__snapshot_mor_with_clitic.snap
---
source: crates/talkbank-re2c-parser/tests/snapshot_tests.rs
expression: tokens
---
- kind: "MorWord { pos: \"pron\", lemma_features: \"it\" }"
  text: pron
- kind: MorTilde
  text: "~"
- kind: "MorWord { pos: \"aux\", lemma_features: \"be-Fin-Ind-Pres-S3\" }"
  text: aux
- kind: Whitespace
  text: " "
- kind: Period
  text: "."
- kind: Newline
  text: "\n"
