crates/talkbank-re2c-parser/tests/snapshots/snapshot_tests__snapshot_participants.snap
---
source: crates/talkbank-re2c-parser/tests/snapshot_tests.rs
expression: tokens
---
- kind: HeaderPrefix
  text: "@Participants:\t"
- kind: ParticipantWord
  text: CHI
- kind: Whitespace
  text: " "
- kind: ParticipantWord
  text: Target_Child
- kind: Comma
  text: ","
- kind: Whitespace
  text: " "
- kind: ParticipantWord
  text: MOT
- kind: Whitespace
  text: " "
- kind: ParticipantWord
  text: Mother
- kind: Comma
  text: ","
- kind: Whitespace
  text: " "
- kind: ParticipantWord
  text: FAT
- kind: Whitespace
  text: " "
- kind: ParticipantWord
  text: Father
- kind: Newline
  text: "\n"
