crates/talkbank-re2c-parser/tests/snapshots/snapshot_tests__snapshot_pho.snap
---
source: crates/talkbank-re2c-parser/tests/snapshot_tests.rs
expression: tokens
---
- kind: PhoWord
  text: wɑ
- kind: PhoPlus
  text: +
- kind: PhoWord
  text: kɪŋ
- kind: Whitespace
  text: " "
- kind: PhoWord
  text: hɛloʊ
- kind: Whitespace
  text: " "
- kind: Period
  text: "."
- kind: Newline
  text: "\n"
