crates/talkbank-re2c-parser/tests/snapshots/snapshot_tests__snapshot_tier_with_bullet.snap
---
source: crates/talkbank-re2c-parser/tests/snapshot_tests.rs
expression: tokens
---
- kind: TextSegment
  text: "some text "
- kind: "MediaBullet { raw_text: \"\\u{15}100_200\\u{15}\", start_time: \"100\", end_time: \"200\", skip: false }"
  text: "\u0015100_200\u0015"
- kind: TextSegment
  text: " more text"
- kind: Newline
  text: "\n"
