crates/talkbank-re2c-parser/tests/snapshots/snapshot_tests__snapshot_types.snap
---
source: crates/talkbank-re2c-parser/tests/snapshot_tests.rs
expression: tokens
---
- kind: HeaderPrefix
  text: "@Types:\t"
- kind: "TypesFields { design: \"longitudinal\", activity: \"naturalistic\", group: \"TD\" }"
  text: longitudinal
- kind: Newline
  text: "\n"
